[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arkml"
version = "0.1.0"
description = "ARK ML Robotics Framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "hydra-core",
    "torch",
    "diffusers",
]

[project.scripts]
arkml-train = "arkml.tools.train:main"

