[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arkml"
version = "1.0.0"
description = "Machine learning backbone for the Ark Robotics Framework, providing core models, algorithms, and tools to enable intelligent perception, decision-making, and control in robotic applications."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "hydra-core",
    "torch",
    "diffusers",
]

[project.scripts]
arkml-train = "arkml.tools.train:main"
arkml-rollout = "arkml.tools.policy_service:main"

